added products endpoints
